--- a/TP5_GRUPO36/pom.xml
+++ b/TP5_GRUPO36/pom.xml
@@ -39,7 +39,7 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
         <dependency>
-                    <groupId>org.webjars</groupId>
+            <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>5.1.3</version>
         </dependency>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-                    <version>3.6.0</version>
+            <version>3.6.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
         <dependency>
@@ -55,8 +55,12 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.45</version>
         </dependency>
+
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-validation</artifactId>        	
+        </dependency>
         
-		
 	</dependencies>
 
 	<build>
